# UBB

./: .gitignore  README.md
ACS/: assignments  ex2.asm  ex2.lst  ex3.asm  ex3.lst
ACS/Assignments/Andreea/: 2.mul  mulSigned.asm  mulSigned.lst
ACS/Assignments/Week10/: Problem10File.asm  Problem10File.lst  Problem10FileSecond.asm  Problem10FileSecond.lst  Problem10Hexa.asm  Problem10Hexa.lst
ACS/Assignments/Week13/: functions.asm  functions.lst  module.asm  module_for_c.asm  test
ACS/Assignments/Week3/: Problem1.asm  Problem1.lst  Problem2.asm  Problem2.lst
ACS/Assignments/Week5/: AddSubSigned.asm  AddSubSigned.lst  MulDivSigned.asm  MulDivSigned.lst
ACS/Assignments/Week6/: Problem10.asm  Problem10.lst  Problem9.asm  Problem9.lst
ACS/Assignments/Week7/: Problem10.asm  Problem10.lst
ACS/Assignments/Week8/: Problem10.asm  Problem10.lst
ACS/Labs/Lab11/: factorial  (+10 more)
ACS/Test/: TestSeraVictor.asm  TestSeraVictor.lst  file.txt
Algebra/AbelianGroups/: main.cpp
Algebra/AssociativeOperations/: main.cpp
Algebra/SetPartitions/: main.cpp  set.h
Algebra/TransitiveRelations/: TransitiveRelations  main.cpp
FP/Repositories/: FileBasedRepository.py  JsonRepository.py
FP/assignments/: temp
LogicaComputationala/build-LogicaComputationalaSem1-Desktop_Qt_5_13_1_GCC_64bit-Debug/: LogicaComputationalaSem1  Makefile
OOP/Assignment2/: main.c
OOP/Assignment3/: .gitignore.txt  Assignment3.sln
OOP/LiviaDates/: CMakeLists.txt  main.c
OOP/LiviaNewDates/: CMakeLists.txt
Year3/Sem1/Distributed Programming/Lab7/: CMakeLists.txt  karatsuba.cpp  on2.cpp  readme.md
(+1021 files in other folders)
